--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Soldiers -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'War stories'
+- GITenberg
 title: Ned, Bob and Jerry on the Firing Line; Or, The Motor Boys Fighting for Uncle
   Sam
 url: http://www.gutenberg.org/ebooks/28442
